Create component and stories for Gameitem

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -10,6 +10,8 @@ $color-blue-button: #004D9A;
 $color-black-headline: #333;
 $color-black-body: #222;
 $color-gray-detail: #606060;
+$color-gray-bg-light: #f0f0f0;
+$color-gray-bg-dark: #D4D6D9;
 
 $border-radius-default: #{(6/16)}rem;
 
