--- a/src/_rems.scss
+++ b/src/_rems.scss
@@ -1,15 +1,21 @@
 $rem1: #{(1/16)}rem;
+$rem4: #{(4/16)}rem;
+$rem5: #{(5/16)}rem;
+$rem6: #{(6/16)}rem;
 $rem8: #{(8/16)}rem;
 $rem10: #{(10/16)}rem;
 $rem12: #{(12/16)}rem;
+$rem13: #{(13/16)}rem;
 $rem14: #{(14/16)}rem;
 $rem15: #{(15/16)}rem;
 $rem16: 1rem;
 $rem18: #{(18/16)}rem;
+$rem19: #{(19/16)}rem;
 $rem20: #{(20/16)}rem;
 $rem21: #{(21/16)}rem;
 $rem24: #{(24/16)}rem;
 $rem30: #{(30/16)}rem;
+$rem36: #{(36/16)}rem;
 $rem40: #{(40/16)}rem;
 $rem50: #{(50/16)}rem;
 $rem60: #{(60/16)}rem;
@@ -17,4 +23,5 @@ $rem80: #{(80/16)}rem;
 $rem180: #{(180/16)}rem;
 $rem240: #{(240/16)}rem;
 $rem320: #{(320/16)}rem;
+$rem420: #{(420/16)}rem;
 $rem500: #{(500/16)}rem;
