--- a/src/2molecules/archiveitem/archiveitem.scss
+++ b/src/2molecules/archiveitem/archiveitem.scss
@@ -5,19 +5,32 @@
     display: flex;
 }
 
-.archiveitem__image {
+.archiveitem__imagelink {
     align-self: flex-start;
     display: none;
 
     @media (min-width: $breakpoint-tablet) {
-        display: inline-block;
+        display: block;
         height: auto;
         margin-right: $rem30;
+        min-width: $rem240;
         width: $rem240;
     }
 
     @media (min-width: $rem60) {
         margin-right: $rem60;
+    }
+
+}
+
+.archiveitem__image {
+    box-shadow: 0 0 0 0 rgba(0,0,0,0.0);
+    transition: $transition-default;
+
+    &:hover,
+    &:focus {
+        box-shadow: 0 12px 12px -12px rgba(0,0,0,0.3);
+        transform: rotate(2deg) scale(1.1);
     }
 }
 
