--- a/src/_rems.scss
+++ b/src/_rems.scss
@@ -17,6 +17,7 @@ $rem24: #{(24/16)}rem;
 $rem30: #{(30/16)}rem;
 $rem36: #{(36/16)}rem;
 $rem40: #{(40/16)}rem;
+$rem42: #{(42/16)}rem;
 $rem50: #{(50/16)}rem;
 $rem60: #{(60/16)}rem;
 $rem80: #{(80/16)}rem;
