Refactor naming: Camelcase all components (.js, .scss, .story, folder), add Html-suffix to every js component to distinctly differ from stories names

--- a/src/2molecules/molecules.scss
+++ b/src/2molecules/molecules.scss
@@ -1,4 +1,4 @@
-@import "archiveitem/archiveitem";
-@import "gameitem/gameitem";
-@import "newsitem/newsitem";
-@import "videoitem/videoitem";
+@import "ArchiveItem/ArchiveItem";
+@import "GameItem/GameItem";
+@import "NewsItem/NewsItem";
+@import "VideoItem/VideoItem";
