--- a/src/1atoms/atoms.scss
+++ b/src/1atoms/atoms.scss
@@ -1,4 +1,4 @@
-@import "chevron/chevron";
-@import "gamescore/gamescore";
-@import "link/link";
-@import "listtitle/listtitle";
+@import "Chevron/Chevron";
+@import "GameScore/GameScore";
+@import "Link/Link";
+@import "ListTitle/ListTitle";
