--- a/src/main.scss
+++ b/src/main.scss
@@ -3,5 +3,5 @@
 @import "variables";
 @import "typography";
 
-@import "1atoms/atoms";
-@import "2molecules/molecules";
+@import "1Atoms/Atoms";
+@import "2Molecules/Molecules";
