--- a/src/2molecules/molecules.scss
+++ b/src/2molecules/molecules.scss
@@ -1,4 +1,5 @@
 @import "ArchiveItem/ArchiveItem";
+@import "Chevrons/Chevrons";
 @import "GameItem/GameItem";
 @import "NewsItem/NewsItem";
 @import "VideoItem/VideoItem";
