--- a/src/2molecules/molecules.scss
+++ b/src/2molecules/molecules.scss
@@ -1,5 +1,6 @@
 @import "ArchiveItem/ArchiveItem";
 @import "Chevrons/Chevrons";
 @import "GameItem/GameItem";
+@import "ListControl/ListControl";
 @import "NewsItem/NewsItem";
 @import "VideoItem/VideoItem";
