--- a/src/2molecules/molecules.scss
+++ b/src/2molecules/molecules.scss
@@ -2,5 +2,6 @@
 @import "Chevrons/Chevrons";
 @import "GameItem/GameItem";
 @import "ListControl/ListControl";
+@import "ListHeader/ListHeader";
 @import "NewsItem/NewsItem";
 @import "VideoItem/VideoItem";
