--- a/src/3Organisms/VideosList/VideosList.scss
+++ b/src/3Organisms/VideosList/VideosList.scss
@@ -1,16 +1,16 @@
 @import "../../variables";
 @import "../../rems";
 
-.newslist__slider {
+.videoslist__slider {
     overflow-x: auto;
     overflow-y: visible;
 }
 
-.newslist__items {
+.videoslist__items {
     display: flex;
     margin: 0 -$rem15;
 }
 
-.newslist__item {
+.videoslist__item {
     margin: 0 $rem15;
 }
