GamesList hax to show "next game" badge

--- a/src/3Organisms/GamesList/GamesList.scss
+++ b/src/3Organisms/GamesList/GamesList.scss
@@ -2,8 +2,10 @@
 @import "../../rems";
 
 .gameslist__slider {
+    margin-top: -$rem30;
     overflow-x: auto;
     overflow-y: visible !important;
+    padding-top: $rem30;
 }
 
 .gameslist__items {
