Atom: BannerLink, Molecule: BannerLinks, Template: Home

--- a/src/2molecules/molecules.scss
+++ b/src/2molecules/molecules.scss
@@ -1,4 +1,5 @@
 @import "ArchiveItem/ArchiveItem";
+@import "BannerLinks/BannerLinks";
 @import "Chevrons/Chevrons";
 @import "GameItem/GameItem";
 @import "ListHeader/ListHeader";
