--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -15,6 +15,8 @@ $color-gray-bg-dark: #D4D6D9;
 
 $border-radius-default: #{(6/16)}rem;
 
+$text-shadow-default: 1px 1px 0px #000;
+
 $transition-default: all 0.2s ease-in-out;
 
 $breakpoint-mobile: 600px;
