--- a/src/1Atoms/Atoms.scss
+++ b/src/1Atoms/Atoms.scss
@@ -1,3 +1,5 @@
+@import "ArticleBody/ArticleBody";
+@import "ArticleTitle/ArticleTitle";
 @import "BannerLink/BannerLink";
 @import "Chevron/Chevron";
 @import "GameScore/GameScore";
