--- a/src/2Molecules/Molecules.scss
+++ b/src/2Molecules/Molecules.scss
@@ -1,4 +1,5 @@
 @import "ArchiveItem/ArchiveItem";
+@import "ArticleHeader/ArticleHeader";
 @import "Chevrons/Chevrons";
 @import "GameItem/GameItem";
 @import "ListHeader/ListHeader";
