Atoms: ArticleImage, EndLine

--- a/src/1Atoms/Atoms.scss
+++ b/src/1Atoms/Atoms.scss
@@ -1,7 +1,9 @@
 @import "ArticleBody/ArticleBody";
+@import "ArticleImage/ArticleImage";
 @import "ArticleTitle/ArticleTitle";
 @import "BannerLink/BannerLink";
 @import "Chevron/Chevron";
+@import "EndLine/EndLine";
 @import "GameScore/GameScore";
 @import "Link/Link";
 @import "ListTitle/ListTitle";
