Reinstall packages and setup, update stories to match

--- a/src/1Atoms/EndLine/EndLine.scss
+++ b/src/1Atoms/EndLine/EndLine.scss
@@ -2,7 +2,7 @@
 @import "../../rems";
 
 .endline {
-    background: url('assets/img/reidars-endline@2x.png') 50% 50% no-repeat;
+    background: url('../../assets/img/reidars-endline@2x.png') 50% 50% no-repeat;
     background-size: auto 73px;
     border: none !important;
     display: block;
