--- a/src/_rems.scss
+++ b/src/_rems.scss
@@ -15,9 +15,11 @@ $rem20: #{(20/16)}rem;
 $rem21: #{(21/16)}rem;
 $rem24: #{(24/16)}rem;
 $rem30: #{(30/16)}rem;
+$rem32: #{(32/16)}rem;
 $rem36: #{(36/16)}rem;
 $rem40: #{(40/16)}rem;
 $rem42: #{(42/16)}rem;
+$rem48: #{(48/16)}rem;
 $rem50: #{(50/16)}rem;
 $rem60: #{(60/16)}rem;
 $rem80: #{(80/16)}rem;
