--- a/src/2Molecules/ArticleCaptionedImage/ArticleCaptionedImage.scss
+++ b/src/2Molecules/ArticleCaptionedImage/ArticleCaptionedImage.scss
@@ -1,9 +1,11 @@
-@import "../../variables";
+@import "../../functions";
 @import "../../rems";
+@import "../../variables";
 
 .articlecaptionedimage__caption {
     color: #000;
+    @include responsive-font(16, 18);
     font-weight: $font-weight-medium;
-    line-height: $rem24;
+    line-height: 1.5em;
     margin-top: $rem30;
 }
