--- a/src/3Organisms/ArchiveList/ArchiveList.scss
+++ b/src/3Organisms/ArchiveList/ArchiveList.scss
@@ -1,5 +1,5 @@
-@import "../../rems";
+@import "../../functions";
 
 .archivelist__item {
-    margin-bottom: $rem60;
+    @include responsive-margin-bottom(60, 80);
 }
