--- a/src/4Templates/Article/Article.scss
+++ b/src/4Templates/Article/Article.scss
@@ -1,5 +1,6 @@
-@import "../../variables";
+@import "../../functions";
 @import "../../rems";
+@import "../../variables";
 
 .article {
     margin: 0 auto;
@@ -7,32 +8,17 @@
 }
 
 .article__header {
-    margin-bottom: $rem30;
-    @media (min-width: $breakpoint-tablet) {
-        margin-bottom: $rem60;
-    }
+    @include responsive-margin-bottom(30, 60);
 }
 
 .article__score {
-    margin-bottom: $rem30;
-
-    @media (min-width: $breakpoint-tablet) {
-        margin-bottom: $rem60;
-    }
+    @include responsive-margin-bottom(30, 60);
 }
 
 .article__content {
-    margin-bottom: $rem30;
-
-    @media (min-width: $breakpoint-tablet) {
-        margin-bottom: $rem60;
-    }
+    @include responsive-margin-bottom(30, 60);
 }
 
 .article__image {
-    margin-bottom: $rem30;
-
-    @media (min-width: $breakpoint-tablet) {
-        margin-bottom: $rem60;
-    }
+    @include responsive-margin-bottom(30, 60);
 }
