Work on header and navigation

--- a/src/1Atoms/Atoms.scss
+++ b/src/1Atoms/Atoms.scss
@@ -7,4 +7,6 @@
 @import "GameScore/GameScore";
 @import "Link/Link";
 @import "ListTitle/ListTitle";
+@import "Logo/Logo";
+@import "MenuToggler/MenuToggler";
 @import "MetaText/MetaText";
