--- a/src/3Organisms/Organisms.scss
+++ b/src/3Organisms/Organisms.scss
@@ -1,5 +1,6 @@
 @import "ArchiveList/ArchiveList";
 @import "BannerLinks/BannerLinks";
 @import "GamesList/GamesList";
+@import "Header/Header";
 @import "NewsList/NewsList";
 @import "VideosList/VideosList";
