--- a/src/_rems.scss
+++ b/src/_rems.scss
@@ -1,4 +1,5 @@
 $rem1: #{(1/16)}rem;
+$rem2: #{(2/16)}rem;
 $rem4: #{(4/16)}rem;
 $rem5: #{(5/16)}rem;
 $rem6: #{(6/16)}rem;
@@ -14,15 +15,19 @@ $rem19: #{(19/16)}rem;
 $rem20: #{(20/16)}rem;
 $rem21: #{(21/16)}rem;
 $rem24: #{(24/16)}rem;
+$rem28: #{(28/16)}rem;
 $rem30: #{(30/16)}rem;
 $rem32: #{(32/16)}rem;
+$rem34: #{(34/16)}rem;
 $rem36: #{(36/16)}rem;
 $rem40: #{(40/16)}rem;
 $rem42: #{(42/16)}rem;
+$rem44: #{(44/16)}rem;
 $rem48: #{(48/16)}rem;
 $rem50: #{(50/16)}rem;
 $rem60: #{(60/16)}rem;
 $rem80: #{(80/16)}rem;
+$rem120: #{(120/16)}rem;
 $rem180: #{(180/16)}rem;
 $rem240: #{(240/16)}rem;
 $rem320: #{(320/16)}rem;
