--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -9,6 +9,8 @@ body {
 a {
     color: $color-blue-main;
     text-decoration: none;
+    transition: $transition-default;
+
     &:hover,
     &:focus {
         color: $color-blue-button;
