--- a/src/2Molecules/Molecules.scss
+++ b/src/2Molecules/Molecules.scss
@@ -4,5 +4,6 @@
 @import "Chevrons/Chevrons";
 @import "GameItem/GameItem";
 @import "ListHeader/ListHeader";
+@import "MobileMenu/MobileMenu";
 @import "NewsItem/NewsItem";
 @import "VideoItem/VideoItem";
