--- a/src/2Molecules/Molecules.scss
+++ b/src/2Molecules/Molecules.scss
@@ -6,4 +6,5 @@
 @import "ListHeader/ListHeader";
 @import "MobileMenu/MobileMenu";
 @import "NewsItem/NewsItem";
+@import "SuperHero/SuperHero";
 @import "VideoItem/VideoItem";
