--- a/src/3Organisms/Organisms.scss
+++ b/src/3Organisms/Organisms.scss
@@ -1,6 +1,7 @@
 @import "ArchiveList/ArchiveList";
 @import "BannerLinks/BannerLinks";
 @import "GamesList/GamesList";
+@import "Footer/Footer";
 @import "Header/Header";
 @import "NewsList/NewsList";
 @import "VideosList/VideosList";
