--- a/src/_rems.scss
+++ b/src/_rems.scss
@@ -28,6 +28,7 @@ $rem50: #{(50/16)}rem;
 $rem60: #{(60/16)}rem;
 $rem80: #{(80/16)}rem;
 $rem120: #{(120/16)}rem;
+$rem160: #{(160/16)}rem;
 $rem180: #{(180/16)}rem;
 $rem240: #{(240/16)}rem;
 $rem320: #{(320/16)}rem;
