--- a/src/1Atoms/Atoms.scss
+++ b/src/1Atoms/Atoms.scss
@@ -5,6 +5,7 @@
 @import "Chevron/Chevron";
 @import "EndLine/EndLine";
 @import "GameScore/GameScore";
+@import "Hero/Hero";
 @import "Link/Link";
 @import "ListTitle/ListTitle";
 @import "Logo/Logo";
