--- a/src/4Templates/Article/Article.scss
+++ b/src/4Templates/Article/Article.scss
@@ -3,7 +3,9 @@
 @import "../../variables";
 
 .article {
-    margin: 0 auto;
+    @include responsive-margin-top(32, 40);
+    margin-left: auto;
+    margin-right: auto;
     max-width: $rem800;
 }
 
