--- a/src/main.scss
+++ b/src/main.scss
@@ -13,3 +13,16 @@
     max-width: #{(1440/16)}rem;
     @include responsive-padding-x(24, 72);
 }
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+}
+
+.embed-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
